Revision history for {{ $dist->name }}:

{{$NEXT}}
  [Bug Fixes]
  - Actually set the coercion.

v0.1.1    2018-11-10 00:28:47+00:00 Europe/London
  [Bug Fixes]
  - Specified a minimum version of Types::Const.

v0.1.0    2018-11-10 00:25:46+00:00 Europe/London
  - Initial release.