@@ -4,6 +4,9 @@ Revision history for {{ $dist->name }}:
   [Bug Fixes]
   - Actually set the coercion.
 
+  [Documentation]
+  - Elaborated on what this is equivalent to.
+
 v0.1.1    2018-11-10 00:28:47+00:00 Europe/London
   [Bug Fixes]
   - Specified a minimum version of Types::Const.
